@@ -1,5 +1,7 @@
 2010-04-26 Ma Yue <velly.empire@gmail.com>
     * Change the installation of World of padman in Fedora
+    * Add the buton to run Gnome Control Center
+    * Add the function of backup Gconfig Setting
 
 2010-04-26 Homer Xing <homer.xing@gmail.com>
 
